[gd_scene load_steps=4 format=3 uid="uid://csv8ovvh1udk0"]

[ext_resource type="Script" uid="uid://b2n0fhbqhre44" path="res://scenes/frame.gd" id="1_m7nv7"]
[ext_resource type="PackedScene" uid="uid://cw5ga8ij5krv" path="res://scenes/levels/level_2_frames/texturelvl2.tscn" id="2_h0722"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_law6f"]
size = Vector2(116.5, 66.5)

[node name="Frame" type="Area2D" groups=["frames"]]
monitoring = false
script = ExtResource("1_m7nv7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(57.75, 32.75)
shape = SubResource("RectangleShape2D_law6f")

[node name="TextureRect" parent="." instance=ExtResource("2_h0722")]
visible = false

[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="correct" from="TextureRect" to="." method="_on_texture_rect_correct"]
[connection signal="not_correct" from="TextureRect" to="." method="_on_texture_rect_not_correct"]
